kube-04/meteo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: meteo
  name: meteo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meteo
  template:
    metadata:
      labels:
        app: meteo
    spec:
      containers:
      - name: meteo
        image: gcr.io/winzana-workshop/knative-kong/meteo:v1.0.6
        command: ['node', './dist/apps/api/meteo/main.js']
        ports:
        - containerPort: 3333
          name: web
          protocol: TCP
---
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: meteo
  name: meteo
spec:
  ports:
  - port: 3333
  selector:
    app: meteo
