kube-04/front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.demo3.example.com
    secretName: demo3.example.com
  rules:
  - host: www.demo3.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 8080
